# cookiecutter-python-cli-tool-poetry-template

./: .flake8  .isort.cfg  .ruff.toml  .yamlignore  .yamllint  CONTRIBUTING.md  Makefile  README.md  cookiecutter-python-cli-tool-poetry-template.json  cookiecutter.json  pyproject.toml
.github/workflows/: test.yml
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml
{{ cookiecutter.project_slug }}/.devcontainer/: devcontainer.json
{{ cookiecutter.project_slug }}/.github/: FUNDING.yml
{{ cookiecutter.project_slug }}/src/: cli.py
{{ cookiecutter.project_slug }}/src/{{ cookiecutter.project_python }}/: {{ cookiecutter.project_python }}.py
{{ cookiecutter.project_slug }}/tests/: test_{{ cookiecutter.project_python }}.py
